--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a href="#about" class="smoothScroll">About</a></li>
           <li><a href="#portfolio" class="smoothScroll">Photographs</a></li>
           <li><a href="#videos" class="smoothScroll">Videos</a></li>
+          <li><a href="https://palmgarmer.github.io/resume/" class="smoothScroll">Resume</a></li>
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
 
@@ -267,10 +268,8 @@
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
-                <li><span>844/283 Soi Jaransanitwong 57</span></li>
-                <li><span>Bangkok, Thailand</span></li>
-                <li><span>+88 806287815</span></li>
-                <li><span>palmgarmer@gmail.com</span></li>
+                <li><span>sirapong.nitikunchon@gmail.com</span></li>
+                <li><span><a href="https://github.com/palmgarmer">Github</a></span></li>
               </ul>
 
             </div>
@@ -350,7 +349,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
         -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by palmgarmer
       </div>
 
     </div>
