--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
               create the combination between both things. I am also interested in directing videos. I can work in the
               field of photography, and videos such as video editing and directing. I have the ability to use the
               PremierePro, AfterEffect, Photoshop, and illustrator. I can play music in a variety of musical instruments
-              such as drum guitar, and synthesizer. my favorite instrument is the bass. I have written a song and there
-              are a number of demos that are ready to be mastered.Please content me, I am looking forward to working
+              such as drum guitar, and synthesizer.My favorite instrument is the bass. I have written a song and there
+              are a number of demos that are ready to be mastered.Please contact me, I am looking forward to working
               with you</p>
 
           </div>
