update profile on 2023

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#about" class="smoothScroll">About</a></li>
           <li><a href="#portfolio" class="smoothScroll">Photographs</a></li>
           <li><a href="#videos" class="smoothScroll">Videos</a></li>
-          <li><a href="https://palmgarmer.github.io/resume/" class="smoothScroll">Resume</a></li>
+          <li><a href="resume/" class="smoothScroll">Resume</a></li>
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
 
@@ -69,11 +69,9 @@
     <div class="container">
       <div class="header-content">
         <h1>I'm <span class="typed"></span></h1>
-        <p>Coffee, Books, Times</p>
+        <p>Coffee, Music, Times</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="https://www.facebook.com/sirapong.nitikunchon"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/_siraponqpalm"><i class="ion-social-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/palmgarmers/"><i class="ion-social-instagram"></i></a></li>
         </ul>
       </div>
@@ -98,14 +96,12 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="separator">I graduated from the Faculty of Engineering and Industrial Technology in Electronic and
-              computer systems, Silpakorn University. I love to design and study in Engineering. It makes me able to
-              create the combination between both things. I am also interested in directing videos. I can work in the
-              field of photography, and videos such as video editing and directing. I have the ability to use the
-              PremierePro, AfterEffect, Photoshop, and illustrator. I can play music in a variety of musical instruments
-              such as drum guitar, and synthesizer.My favorite instrument is the bass. I have written a song and there
-              are a number of demos that are ready to be mastered.Please contact me, I am looking forward to working
-              with you</p>
+            <p class="separator">I am a Full stack Developer with 5 years of experience 
+              in Flutter, FastApi, PHP for all platform (Web, Mobile, iOS, Android).
+              I am passionate about learning new technologies, and 
+              I always strive to deliver high-quality software on time. 
+              My strong interpersonal skills make me an excellent team player, 
+              and I am confident that I can contribute to your team's success.</p>
 
           </div>
 
@@ -123,43 +119,36 @@
       <div class="services-carousel owl-theme">
 
         <div class="services-block">
-
-          <i class="ion-ios-browsers-outline"></i>
-          <span>WEB DESIGN</span>
-          <p class="separator">More than interface is exprerince</p>
-
+          <a href="https://github.com/palmgarmer">
+            <i class="ion-ios-browsers-outline"></i>
+            <span>CODE</span>
+            <p class="separator">More than interface is exprerince</p>
+          </a>
         </div>
 
-        <div class="services-block">
-
-          <i class="ion-ios-lightbulb-outline"></i>
-          <span>CREATIVE</span>
-          <p class="separator">Two driffrent make new ideas</p>
-
-        </div>
 
         <div class="services-block">
-
-          <i class="ion-ios-play-outline"></i>
-          <span>DIRECTOR</span>
-          <p class="separator">Share my story by filming</p>
-
+          <a href="https://www.youtube.com/@PalmsDay">
+            <i class="ion-ios-play-outline"></i>
+            <span>Video Content</span>
+            <p class="separator">Daily Vlog & more</p>
+          </a>
         </div>
 
         <div class="services-block">
 
           <i class="ion-ios-musical-notes"></i>
-          <span>Songs</span>
-          <p class="separator">Sounds telling the stories and remind a good subconsious</p>
+          <span>SONG</span>
+          <p class="separator">Sounds to subconsious feelings.</p>
 
         </div>
 
         <div class="services-block">
-
-          <i class="ion-ios-camera-outline"></i>
-          <span>PHOTOGRAPHY</span>
-          <p class="separator">Sometimes photograph can send feelings more than words</p>
-
+          <a href="https://www.instagram.com/palmgarmers/">
+            <i class="ion-ios-camera-outline"></i>
+            <span>PHOTOGRAPHY</span>
+            <p class="separator">Just shoot it.</p>
+          </a>
         </div>
 
       </div>
@@ -240,11 +229,11 @@
       <br>
       <div class="container">
         <div class="journal-block">
+          
           <div class="row">
             <div class="col-lg-12">
-
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Cn5rT2lh4aY">
+                <iframe class="embed-responsive-item" src="https://youtube.com/embed/jklPFJiDbK8">
                 </iframe>
               </div>
             </div>
@@ -262,8 +251,8 @@
       <div class="contact-block1">
         <div class="row">
 
-          <div class="col-lg-6">
-            <div class="contact-contact">
+          <div class="col-lg-12">
+            <div class="contact-contact text-center">
 
               <h2 class="mb-30">GET IN TOUCH</h2>
 
@@ -275,52 +264,6 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
-            <form action="" method="post" role="form" class="contactForm">
-              <div class="row">
-
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-
-                <div class="col-lg-6">
-                  <div class="form-group contact-block1">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                      data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                      data-rule="email" data-msg="Please enter a valid email" />
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                      data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="12" data-rule="required"
-                      data-msg="Please write something for us" placeholder="Message"></textarea>
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-12">
-                  <input type="submit" class="btn btn-defeault btn-send" value="Send message">
-                </div>
-
-              </div>
-            </form>
-          </div>
         </div>
       </div>
     </div>
@@ -334,22 +277,13 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="https://www.facebook.com/sirapong.nitikunchon"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/_siraponqpalm"><i class="ion-social-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/palmgarmers/"><i class="ion-social-instagram"></i></a></li>
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
 
       <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-        -->
-        Designed by palmgarmer
+        Developed by palmgarmer
       </div>
 
     </div>
