--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
   <div class="row">
 	<div class="col-md-5 text-center">
 		<h1>SIRAPONG NITIKUNCHON</h1>
-		<p>WEB DEVELOPER</p>
+		<p>FULL STACK DEVELOPER</p>
 		<br><br>
 	</div>
     	<div class="col-md-7">
@@ -30,9 +30,8 @@
       		high school college  |  MAY 2008 - mar 2013
       		<br><br>
       		<p>
+				&middot;  Math & Science<br>
       			&middot;  Graduated with GPAX 2.75<br>
-	  		&middot;  Math & Science<br>
-	  		&middot;  Play Tuba & Percussion in Nairong Wind Symphony<br>
       		</p>
       			<br><br>
       			<b>SILPAKORN UNIVERSITY</b><br>
@@ -40,38 +39,61 @@
       			<br><br>
       		<p>
       			&middot;  Faculty of Engineering and Industrial Technology<br>
-	  		&middot;  Department of Electrical and Computer System<br>
-	  		&middot;  Graduated with GPAX 2.21<br>
+				&middot;  Department of Electrical and Computer System<br>
+				&middot;  Graduated with GPAX 2.21<br>
       		</p>
       		<br><br>
       <h3>EXPERIENCE</h3>
       		<br>
+			  <b>AWARE CORPORATION LIMITED (OUTSOURCE)</b><br>
+      		FULL STACK DEVELOPER  |  2021 - PRESENT<br>
+			  <b>@ DTGO CORPORATION LIMITED</b><br>
+      		<br><br>
+      		<p>
+      			&middot;  Develop and co-design supported user required.<br>
+				&middot;  Develop API for use internal project.<br>
+				&middot;  Implement and deploy project.<br>
+				&middot;  Fix issues and update project follow requirements.<br>
+      		</p>
+      		<br><br>
       		<b>SONY TECHNOLOGY (THAILAND) CO. LTD</b><br>
-      		SYSTEM ENGINEER  |  NOV 2018 - PRESENT
+      		SYSTEM ENGINEER  |  2018 - 2021
       		<br><br>
       		<p>
       			&middot;  Co-designed and develop web application system<br>
-	  		&middot;  Maintenance and improvement system<br>
-	  		&middot;  Support & Maintenance system using in production<br>
+				&middot;  Maintenance and improvement system<br>
+				&middot;  Support & Maintenance system using in production<br>
       		</p>
+      		<br><br>
+
+			<h3>PROJECT</h3>
+      		<br>
+                <p>
+                  	&middot;  Startup Check System<br>
+                  	&middot;  Line Balance Tracking<br>
+                  	&middot;  Production Interlock<br>
+                  	&middot;  Plan Suggestion System<br>
+                  	&middot;  Supplier Code Of conduct<br>
+                  	&middot;  Entertainment Registration<br>
+                </p>
       		<br><br>
       
       		<h3>SKILLS</h3>
       		<br>
                 <p>
-                  	&middot;  Front-end development  (Bootstrap, Angular, Jquery)<br>
-                  	&middot;  Back-end development  (PHP, Javascript)<br>
-                  	&middot;  Database management (MySQL, MSSQL, ORACLE)<br>
-                  	&middot;  Controller (Python, C,C++,C#)<br>
+                  	&middot;  Front-end development  (Flutter web & mobile)<br>
+                  	&middot;  Back-end development  (FastApi, PHP)<br>
+                  	&middot;  Database management (MySQL, MSSQL, Firebase)<br>
+                  	&middot;  Controller (Python, C,C++)<br>
                 </p>
       		<br><br>
+
             <h3>ACTIVITIES</h3>
       		<br>
       		<p>
 			&middot;  Write song / Produce song / Master song <br>
 			&middot;  Video Editor Freelance<br>
 			&middot;  Action Painting (Like Jackson Pollock style)<br>
-			&middot;  Play Dota2, Stardew Valley, Don’t stave together etc.<br>
       		</p>
     	</div>
   	</div>
@@ -84,9 +106,9 @@
     	      	<h3>CONTACT</h3>
       			<p>
                 		<a href="https://github.com/palmgarmer/"><font color="black">Github</font></a> | 
-				<a href="Resume.pdf" download><font color="black">Resume</font></a><br>
-      				sirapong.nitikunchon@gmail.com<br>
-	  				080-628-7815<br>
+						<a href="Resume.pdf" download><font color="black">Resume</font></a> |
+						<a href="Resume.pdf" download><font color="black">CV</font></a><br>
+							sirapong.nitikunchon@gmail.com<br>
       			</p>
     		</div>
     	</div>
