update little wording

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="separator">I am a Full stack Developer with 5 years of experience 
+            <p class="separator">I am a Full stack Developer with impressive experience 
               in Flutter, FastApi, PHP for all platform (Web, Mobile, iOS, Android).
               I am passionate about learning new technologies, and 
               I always strive to deliver high-quality software on time. 
